--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,27 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">Settings</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pref_location_key">pref_location</string>
+    <string name="pref_location_title">Location</string>
+    <string name="pref_location_default_value">Medellín</string>
+
+    <string name="pref_units_key">units</string>
+    <string name="pref_units_title">Units</string>
+    <string name="pref_units_default">metric</string>
+
+    <string-array name="pref_units_values">
+        <item>metric</item>
+        <item>imperial</item>
+    </string-array>
+
+    <string-array name="pref_units_entries">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+
+    <string name="action_preferred_location">Pref. Location</string>
 </resources>
